--- a/Compiler/CM1Compiler_CPP/Compiler/Compiler.vcxproj
+++ b/Compiler/CM1Compiler_CPP/Compiler/Compiler.vcxproj
@@ -36,14 +36,22 @@
     <ClInclude Include="CompilationUnitDatabaseBuilder.hpp" />
     <ClInclude Include="ExpressionBuilder.hpp" />
     <ClInclude Include="FunctionBodyBuilder.hpp" />
+    <ClInclude Include="FunctionExecutionUtility.hpp" />
+    <ClInclude Include="FunctionUtility.hpp" />
     <ClInclude Include="IntermidiateRepresentationEmmiter.hpp" />
+    <ClInclude Include="PackageBuildUtility.hpp" />
+    <ClInclude Include="PackageDiscoveryUtility.hpp" />
     <ClInclude Include="Preprocessor.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CompilationUnitDatabaseBuilder.cpp" />
     <ClCompile Include="ExpressionBuilder.cpp" />
     <ClCompile Include="FunctionBodyBuilder.cpp" />
+    <ClCompile Include="FunctionExecutionUtility.cpp" />
+    <ClCompile Include="FunctionUtility.cpp" />
     <ClCompile Include="IntermidiateRepresentationEmmiter.cpp" />
+    <ClCompile Include="PackageBuildUtility.cpp" />
+    <ClCompile Include="PackageDiscoveryUtility.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
