--- a/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj
+++ b/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj
@@ -166,19 +166,26 @@
     <ClInclude Include="AttributeInstance.hpp" />
     <ClInclude Include="AttributeTarget.hpp" />
     <ClInclude Include="CompilationContext.hpp" />
+    <ClInclude Include="execution\BooleanValue.hpp" />
     <ClInclude Include="execution\IRuntimeValue.h" />
     <ClInclude Include="execution\IntegerValue.hpp" />
+    <ClInclude Include="execution\ObjectValue.hpp" />
+    <ClInclude Include="execution\ReferenceValue.hpp" />
+    <ClInclude Include="execution\RuntimeFieldDescriptor.hpp" />
     <ClInclude Include="execution\RuntimeFunctionDescriptor.hpp" />
     <ClInclude Include="execution\RuntimeTypeDescriptor.hpp" />
     <ClInclude Include="execution\StringValue.hpp" />
     <ClInclude Include="Field.hpp" />
     <ClInclude Include="Function.hpp" />
     <ClInclude Include="INamedObject.hpp" />
+    <ClInclude Include="IntermidiateRepresentation\AssigmentStatement.hpp" />
     <ClInclude Include="IntermidiateRepresentation\ExecutionContext.hpp" />
     <ClInclude Include="IntermidiateRepresentation\IExpression.hpp" />
     <ClInclude Include="IntermidiateRepresentation\FunctionCall.hpp" />
+    <ClInclude Include="IntermidiateRepresentation\IExpressionVisitor.hpp" />
     <ClInclude Include="IntermidiateRepresentation\IfElseStatement.hpp" />
     <ClInclude Include="IntermidiateRepresentation\IInstruction.hpp" />
+    <ClInclude Include="IntermidiateRepresentation\IInstructionVisitor.hpp" />
     <ClInclude Include="IntermidiateRepresentation\INameGetter.hpp" />
     <ClInclude Include="IntermidiateRepresentation\ScopeTermination.hpp" />
     <ClInclude Include="IntermidiateRepresentation\ValueLiteralExpression.hpp" />
@@ -202,11 +209,15 @@
     <ClCompile Include="Accessibility.cpp" />
     <ClCompile Include="AttributeTarget.cpp" />
     <ClCompile Include="execution\IntegerValue.cpp" />
+    <ClCompile Include="execution\ObjectValue.cpp" />
+    <ClCompile Include="execution\ReferenceValue.cpp" />
+    <ClCompile Include="execution\RuntimeFieldDescriptor.cpp" />
     <ClCompile Include="execution\RuntimeFunctionDescriptor.cpp" />
     <ClCompile Include="execution\RuntimeTypeDescriptor.cpp" />
     <ClCompile Include="execution\StringValue.cpp" />
     <ClCompile Include="Function.cpp" />
     <ClCompile Include="INamedObject.cpp" />
+    <ClCompile Include="IntermidiateRepresentation\AssigmentStatement.cpp" />
     <ClCompile Include="IntermidiateRepresentation\FunctionCall.cpp" />
     <ClCompile Include="IntermidiateRepresentation\IfElseStatement.cpp" />
     <ClCompile Include="IntermidiateRepresentation\ScopeTermination.cpp" />
@@ -215,6 +226,7 @@
     <ClCompile Include="IntermidiateRepresentation\VariableReferenceExpression.cpp" />
     <ClCompile Include="Namespace.cpp" />
     <ClCompile Include="QualifiedName.cpp" />
+    <ClCompile Include="Target.cpp" />
     <ClCompile Include="Type.cpp" />
     <ClCompile Include="TypeClassifier.cpp" />
     <ClCompile Include="Validation\ValidationError.cpp" />
