--- a/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj
+++ b/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj
@@ -187,6 +187,7 @@
     <ClInclude Include="IntermidiateRepresentation\IInstruction.hpp" />
     <ClInclude Include="IntermidiateRepresentation\IInstructionVisitor.hpp" />
     <ClInclude Include="IntermidiateRepresentation\INameGetter.hpp" />
+    <ClInclude Include="IntermidiateRepresentation\MemberAccessExpression.hpp" />
     <ClInclude Include="IntermidiateRepresentation\ScopeTermination.hpp" />
     <ClInclude Include="IntermidiateRepresentation\ValueLiteralExpression.hpp" />
     <ClInclude Include="IntermidiateRepresentation\VariableDeclaration.hpp" />
@@ -207,6 +208,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Accessibility.cpp" />
+    <ClCompile Include="Attribute.cpp" />
     <ClCompile Include="AttributeTarget.cpp" />
     <ClCompile Include="execution\IntegerValue.cpp" />
     <ClCompile Include="execution\ObjectValue.cpp" />
@@ -220,6 +222,7 @@
     <ClCompile Include="IntermidiateRepresentation\AssigmentStatement.cpp" />
     <ClCompile Include="IntermidiateRepresentation\FunctionCall.cpp" />
     <ClCompile Include="IntermidiateRepresentation\IfElseStatement.cpp" />
+    <ClCompile Include="IntermidiateRepresentation\MemberAccessExpression.cpp" />
     <ClCompile Include="IntermidiateRepresentation\ScopeTermination.cpp" />
     <ClCompile Include="IntermidiateRepresentation\ValueLiteralExpression.cpp" />
     <ClCompile Include="IntermidiateRepresentation\VariableDeclaration.cpp" />
