--- a/Compiler/CM1Compiler_CPP/LanguageLogic/LanguageLogic.vcxproj
+++ b/Compiler/CM1Compiler_CPP/LanguageLogic/LanguageLogic.vcxproj
@@ -55,6 +55,7 @@
     <ClCompile Include="NamespaceBuilder.cpp" />
     <ClCompile Include="OverloadResolutionUtility.cpp" />
     <ClCompile Include="SpecialFunctionUtility.cpp" />
+    <ClCompile Include="SpecialTypes\SpecialTypeLibrary.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
