--- a/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj.filters
@@ -147,6 +147,9 @@
     <ClInclude Include="IntermidiateRepresentation\MemberAccessExpression.hpp">
       <Filter>Header Files\IntermidiateRepresentation</Filter>
     </ClInclude>
+    <ClInclude Include="ObjectWithMetadata.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
