--- a/Compiler/CM1Compiler_CPP/LanguageLogic/LanguageLogic.vcxproj
+++ b/Compiler/CM1Compiler_CPP/LanguageLogic/LanguageLogic.vcxproj
@@ -23,10 +23,13 @@
     <ClInclude Include="BuiltInPackageBuildUtility.hpp" />
     <ClInclude Include="CompileTimeFunctions\CompileTimeFunction.hpp" />
     <ClInclude Include="CompileTimeFunctions\CompileTimeFunctionDictionary.hpp" />
+    <ClInclude Include="CompileTimeFunctions\CompileTimeAllocate.hpp" />
     <ClInclude Include="CompileTimeFunctions\FunctionLibrary.hpp" />
+    <ClInclude Include="CompileTimeFunctions\MarkCompileTimeOnly.hpp" />
     <ClInclude Include="CompileTimeFunctions\Print.hpp" />
     <ClInclude Include="CompileTimeFunctions\ReplaceWithCompilerFunction.hpp" />
     <ClInclude Include="CompileTimeFunctions\ReplaceWithCompilerType.hpp" />
+    <ClInclude Include="CompileTimeInfrastrucutre\CompileTimeHeap.hpp" />
     <ClInclude Include="IntermidiateRepresentationBuilder.hpp" />
     <ClInclude Include="LiteralUtility.hpp" />
     <ClInclude Include="MetatypeUility.hpp" />
@@ -35,6 +38,7 @@
     <ClInclude Include="OverloadResolutionUtility.hpp" />
     <ClInclude Include="SpecialFunctionUtility.hpp" />
     <ClInclude Include="SpecialTypes\SpecialTypeLibrary.hpp" />
+    <ClInclude Include="TypeInstantiationUtility.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DataStructures\DataStructures.vcxproj">
@@ -44,11 +48,14 @@
   <ItemGroup>
     <ClCompile Include="AttributeUtility.cpp" />
     <ClCompile Include="BuiltInPackageBuildUtility.cpp" />
+    <ClCompile Include="CompileTimeFunctions\CompileTimeAllocate.cpp" />
     <ClCompile Include="CompileTimeFunctions\CompileTimeFunctionDictionary.cpp" />
     <ClCompile Include="CompileTimeFunctions\FunctionLibrary.cpp" />
+    <ClCompile Include="CompileTimeFunctions\MarkCompileTimeOnly.cpp" />
     <ClCompile Include="CompileTimeFunctions\Print.cpp" />
     <ClCompile Include="CompileTimeFunctions\ReplaceWithCompilerFunction.cpp" />
     <ClCompile Include="CompileTimeFunctions\ReplaceWithCompilerType.cpp" />
+    <ClCompile Include="CompileTimeInfrastrucutre\CompileTimeHeap.cpp" />
     <ClCompile Include="LiteralUtility.cpp" />
     <ClCompile Include="MetatypeUility.cpp" />
     <ClCompile Include="NameResolver.cpp" />
